style: fixed body overflow-y when the mobile menu is active

--- a/app/scss/layout/_body.scss
+++ b/app/scss/layout/_body.scss
@@ -1,5 +1,17 @@
 @use '../abstracts' as *;
 
+.body {
+  &.active {
+    animation: 0ms remove-scroll 300ms forwards;
+
+    @keyframes remove-scroll {
+      100% {
+        overflow-y: hidden;
+      }
+    }
+  }
+}
+
 .mobile-design,
 .mobile-menu {
   position: absolute;
